# spiral-package-fftx

./: CMakeLists.txt  Contributing.md  README.md  fftxapi.gi  func.gi  init.g  opts.gi  sumsgen.gi  types.gi
.github/workflows/: ubuntu.yml
_bugtraq/: fftx_imdprdft_48x48x48.cpp  fftx_imdprdft_96x96x96.cu  fftx_mdprdft_96x96x96.cpp  fftx_mdprdft_96x96x96.cu  issue-1.g  issue-IMDPRDFT-2.g  issue-MDPRDFT-1.g  issue-MDPRDFT-3.g  issue-dftbat.g  mddft-batch-3.g  sanil1rc.g
_bugtraq/batchdft/: sanil.g  sanil1a.g  sanil1rc-stride.g  sanil1rc.g  sanil2cr.g
_bugtraq/debug/: Mdrconv_81_cu.g
_bugtraq/old/: sanil1.g  sanil1rc.g
breakdown/: breakdown.gi  dft_multistage.gi  dft_multstage.gi  dft_pd_loop.gi  init.g  mddst.gi  mdprdft.gi  mdrconv.gi  prdft.gi  prune.gi  resample.gi  tspl.gi
codegen/: init.g  spl.gi
debug/: Mdrconv_32_cu.g
examples/_bugtraq/: todo.txt
examples/_bugtraq/batchdft/: batch2d.g  patrick.g  patrick2.g  patrick4.g  sanil1rc-stride.g  sanil2cr.g  sanil2cr2d.g  sanil2cstrider.g  sanil2cstrider2d.g
examples/_bugtraq/bracket/: bracket3d.g  bracketcuda3d.g
examples/_bugtraq/debug/: Mdrconv_32_cu.g  Mdrconv_32_cu.icode  Mdrconv_81_cu.cu  Mdrconv_81_cu.icode
examples/_bugtraq/may23-push/: mdprdft-pruned-cuda.g  mdrconv-pruned-cuda.g  warpx.txt
examples/_bugtraq/old/: fftx_imdprdft_96x96x96.cu  fftx_mdprdft_96x96x96.cpp  issue-dftbat.g  sanil1a.g  sanil2.g  sanil2cr.g
examples/_develop/3-stage/: dft-3stage-cuda.g  dft-batch-cuda.g  dft32k-cuda.g  mddft-batch-cuda.g  mddft-cuda.g  prdft-3stage-cuda.g
examples/_develop/dst/: RE_ DST-1 size 512.msg  dst.g
examples/_develop/fortran/: warpx-f.g
examples/_develop/hacc/: hacc-dft.g  hacc-prdft.g  larger-Distributed-DFT-sizes.xlsx  pickradix.g
examples/debug/: Mdrconv_32_cu.cu  Mdrconv_32_cu.g  errors_32.txt  errors_81.txt
examples/fftw/fftx_sample/: CMakeLists.txt  main.c
examples/library-avx-omp/: CMakeLists.txt  mddft-batch.g  mddft.g  mdprdft-batch.g  mdprdft.g
examples/library-c/: CMakeLists.txt  mddft-batch.g  mddft-colmajor-dag.g  mddft-colmajor.g  mddft-f.g  mddft-pruned.g  mddft-rowmajor.g  mddft.g  mddst.g  mdprdft-batch.g  mdprdft-pruned.g  mdprdft.g  mdrconv-batch.g  mdrconv-pruned.g  mdrconv.g  warpx-f.g  warpx.g
examples/library-cuda/: CMakeLists.txt  cuda_rqd_linux.g  cuda_rqd_win.g  dft-3stage-cuda.g  dft-batch-cuda.g  dft-batch-par1-cuda.g  exaefl.g  exafel.g  hockney-mlc-cuda.g  imdprdft-cuda.g  mddft-batch-cuda.g  mddft-cuda.g  mddft-f-cuda.g  mddst.g  mdprdft-batch-cuda.g  mdprdft-cuda.g  mdprdft-f-cuda.g  mdprdft-pruned-cuda.g  mdprdft-pruned-cuday.g  mdrconv-batch-cuda.g  mdrconv-cuda.g  mdrconv-f-cuda.g  mdrconv-pruned-cuda.g  measures.g  prdft-batch-cuda.g  vector-add.g  warpx-cuda.g  warpx-f-cuda.g
examples/library-hip/: CMakeLists.txt  cube-sizes.txt  dft-batch-hip.g  funtest.py  hipdriver.cpp  mddft-batch-hip.g  mddft-f-hip.g  mddft-hip.g  mddft-ptb-hip.g  mddst.g  mdprdft-batch-hip.g  mdprdft-hip.g  mdrconv-batch-hip.g  mdrconvr-hip.g  prdft-batch-hip.g  runtest.py  unithipdriver.cpp
examples/library-hip/debug/: Code snipplet.msg  Crusher Performance Testing Baseline and Process (403 KB).msg  dmdrconv_32x32x32_cu.g  fftx_mddft_128cubed.g  fftx_mddft_256cubedy-3stage.g  fftx_mddft_256cubedy-blockscrmbl.g  fftx_mddft_256cubedy-vect-3stage.g  fftx_mddft_256cubedy-vect.g  fftx_mddft_256cubedy-vector.g  fftx_mddft_256cubedy.g  rocfft_butterfly_template.h  script.g  script2.tex  spiral-vs-rocfft-data.xlsx  stores.txt  threestages.g
examples/library-hip/debug/microbenchmark/: fftx_mddft_64x64x64_HIP.cpp  k64-test2.cpp
examples/library-opencl/: mddft-opencl.g  rconv-opencl.g
examples/library-power/: mddft-batch.g  mddft.g
examples/perf-eng/: CMakeLists.txt  Re  Macros for Spiral-CUDA.msg  Summit CUDA Performance Tweaks Code Sample.msg  algo-verify.g  cube-sizes.txt  dftdriver.cu  funtest.py  gen_files.py  mddft-batch-cuda.g  mddft-cuda-dev.g  mddft-cuda-frame.g  mddft-cuda.g  mddft-meas.g  mddft3d-frame-cuda.g  mddft3d-frame-hip.g  mdprdft-cuda.g  runtest.py  test270.g  transformlib_test.cpp  transformlib_test.cu
examples/perf-eng/beyond-mddft/: dft-batch-cuda.g  mdconv-cuda.g  mddft-batch-cuda.g  mdprdft-batch-cuda.g  mdprdft-cuda.g  mdrconv-batch-cuda.g  mdrconv-cuda.g  mdrconv-pruned-cuda.g  mdrconvr-cuda.g  prdft-batch-cuda.g
examples/testharness/warpx/: CMakeLists.txt  CudaWarpXConst.h  HarnessWarpxCuda.cu  README.md  runtest.py
examples/testharness/warpx/Utils/: WarpXConst.H
examples/walkthrough/: mddft.g  walkthrough-mddft-c.txt
knowledgebase/: batchfft_cuda.gi  conf.gi  fft_cuda.gi  getopts.gi  hockney.gi  hockney_mlc_cuda.gi  init.g  rconv_cuda.gi  warpx.gi  warpx_cuda.gi
nonterms/: init.g  mdprdft.gi  mdrconv.gi  prunedmdprdft.gi  resample.gi  tspl.gi
rewrite/: cleanup.gi  cxsreduce.gi  init.g  promote.gi  rules.gi  sums.gi
rfc/distributed/: hello-3d-local.g  hello-3d.g
sigma/: func.gi  init.g  spl.gi
